--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/tools"
     android:id="@+id/container"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -42,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/bar_nav"
-        android:background="@color/colorSigup"
+        android:background="@color/white"
         >
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,7 +75,7 @@
             android:id="@+id/nav_profile"
             android:layout_alignParentRight="true"
             android:background="@drawable/circleimg"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="6dp"
             >
             <de.hdodenhof.circleimageview.CircleImageView
@@ -85,7 +86,7 @@
                 android:layout_centerVertical="true"
                 android:background="@null"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="1dp"
                 android:layout_marginRight="4dp"
                 />
         </RelativeLayout>
@@ -112,6 +113,7 @@
         android:layout_height="match_parent"
         app:defaultNavHost="false"
         app:navGraph="@navigation/mobile_navigation"
+        android:layout_marginBottom="60dp"
         />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -123,4 +125,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
