--- a/app/src/main/res/layout/activity_tttin_dang.xml
+++ b/app/src/main/res/layout/activity_tttin_dang.xml
@@ -92,16 +92,16 @@
                 android:background="@drawable/circleimg"
                 />
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="230dp"
                 android:layout_height="45dp"
                 android:orientation="vertical"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
                 >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="asdasdasd"
+                    android:text=""
                     android:fontFamily="@font/font1"
                     android:textStyle="bold"
                     android:textSize="14dp"
@@ -118,11 +118,29 @@
                     android:layout_marginTop="5dp"
                     android:numStars="5" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                >
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="25dp"
+                    android:text="Xem trang"
+                    android:textSize="7dp"
+                    android:textColor="@color/red"
+                    android:fontFamily="@font/font1"
+                    android:id="@+id/btnViewProfile"
+                    android:background="@drawable/buttonview"
+                    />
+            </LinearLayout>
         </LinearLayout>
         <TextView
             android:paddingTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="170dp"
             android:id="@+id/tt_mota"
             android:inputType="textMultiLine"
             android:fontFamily="@font/font1"
@@ -144,11 +162,14 @@
                 android:orientation="horizontal"
                 >
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/font1"
                     android:textColor="@color/black"
+                    android:paddingLeft="2dp"
                     android:text="Diện tích: "
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/surface_18px"
                     />
                 <TextView
                     android:layout_width="150dp"
@@ -165,11 +186,13 @@
                 android:orientation="horizontal"
                 >
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/font1"
                     android:textColor="@color/black"
                     android:text="Hướng nhà: "
+                    android:gravity="center"
+                    android:drawableLeft="@drawable/west_direction_18px"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -186,11 +209,13 @@
                 android:orientation="horizontal"
                 >
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/font1"
                     android:textColor="@color/black"
                     android:text="Pháp lý: "
+                    android:drawableLeft="@drawable/law_18px"
+                    android:drawablePadding="5dp"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -201,17 +226,6 @@
                     />
             </LinearLayout>
         </LinearLayout>
-
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:background="@drawable/border"
-            android:id="@+id/tt_btnSua"
-            android:text="Chỉnh sửa"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
