--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -26,20 +26,35 @@
             android:textColor="@color/black"
             android:fontFamily="@font/font1"
             android:textSize="16dp"
-            android:text="asdasdasd"
+            android:text=""
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             />
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:id="@+id/card_gia"
-            android:textColor="@color/red"
-            android:fontFamily="@font/font1"
-            android:textStyle="bold"
-            android:text="asdasd"
-            android:textSize="13dp"
-            />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/card_gia"
+                android:textColor="@color/red"
+                android:fontFamily="@font/font1"
+                android:textStyle="bold"
+                android:text=""
+                android:textSize="13dp"
+                />
+            <ImageButton
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/heart_20px"
+                android:background="@null"
+                android:id="@+id/save"
+                />
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -59,7 +74,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:id="@+id/card_username"
-                android:text="asasd"
+                android:text=""
+                android:layout_marginTop="1dp"
                 android:fontFamily="@font/font1"
                 android:textSize="9dp"
                 android:layout_gravity="center_vertical"
@@ -78,7 +94,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:id="@+id/card_time"
-                android:text="asasd"
+                android:text=""
+                android:layout_marginTop="1dp"
                 android:fontFamily="@font/font1"
                 android:textSize="9dp"
                 android:layout_gravity="center_vertical"
@@ -97,7 +114,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:id="@+id/card_add"
-                android:text="asasd"
+                android:text=""
+                android:layout_marginTop="1dp"
                 android:fontFamily="@font/font1"
                 android:textSize="9dp"
                 android:layout_gravity="center_vertical"
