--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -73,14 +73,14 @@
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:id="@+id/img_dtin1"
-                        android:background="@drawable/image"
+                        android:background="@drawable/border"
                         android:layout_marginRight="5dp"
                         />
                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:id="@+id/img_dtin2"
-                        android:background="@drawable/image"
+                        android:background="@drawable/border"
                         />
                 </LinearLayout>
                 <RelativeLayout
