--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,6 +22,7 @@
                 android:layout_alignParentBottom="true"
                 android:id="@+id/slider"
                 android:layout_width="match_parent"
+                android:background="@color/white"
                 android:layout_height="160dp"
                 android:layout_centerVertical="true"
                 app:sliderAnimationDuration="600"
@@ -41,7 +42,7 @@
         <TableLayout
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="120dp"
             android:layout_below="@id/reSlide"
             android:stretchColumns="*"
             android:shrinkColumns="0, 1, 2"
@@ -56,7 +57,7 @@
                     android:fontFamily="@font/font1"
                     android:textSize="16dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="10dp"
                     android:textColor="@color/colorSigup"
                     />
             </TableRow>
@@ -64,11 +65,12 @@
                 <Button
                     android:id="@+id/home_muaban"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:drawableLeft="@drawable/mua"
-                    android:background="@drawable/border"
+                    android:layout_height="70dp"
+                    android:drawableTop="@drawable/mua"
+                    android:background="@null"
                     android:text="Mua bán"
                     android:padding="10dp"
+                    android:textSize="12dp"
                     android:fontFamily="@font/font1"
                     android:layout_marginRight="5dp"
                     android:layout_marginLeft="5dp"
@@ -76,10 +78,11 @@
                 <Button
                     android:id="@+id/home_chothue"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:drawableLeft="@drawable/thue"
-                    android:background="@drawable/border"
+                    android:layout_height="70dp"
+                    android:drawableTop="@drawable/thue"
+                    android:background="@null"
                     android:text="Cho thuê"
+                    android:textSize="12dp"
                     android:fontFamily="@font/font1"
                     android:layout_marginRight="5dp"
                     android:padding="10dp"
@@ -87,10 +90,11 @@
                 <Button
                     android:id="@+id/home_duan"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/border"
-                    android:drawableLeft="@drawable/duan"
+                    android:layout_height="70dp"
+                    android:drawableTop="@drawable/duan"
+                    android:background="@null"
                     android:text="Dự án"
+                    android:textSize="12dp"
                     android:fontFamily="@font/font1"
                     android:padding="10dp"
                     android:layout_marginRight="5dp"
@@ -111,9 +115,9 @@
             />
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/home_recycle"
             android:background="@color/white"
             />
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
